changing steering controls

--- a/src/config.ini
+++ b/src/config.ini
@@ -2,42 +2,42 @@
 players_num = 5
 
 [player1]
-power = 273
+thrust = 273
 left = 100
 right = 103
 fire = 111
 special = 122
 
 [player2]
-power = 49
+thrust = 49
 left = 91
 right = 93
 fire = 39
 special = 122
 
 [player3]
-power = 50
+thrust = 50
 left = 50
 right = 100
 fire = 50
 special = 49
 
 [player4]
-power = 51
+thrust = 51
 left = 2345
 right = 2345
 fire = 50
 special = 2345
 
 [player5]
-power = 2345
-left = 2345
-right = 2345
-fire = 2345
+thrust = 273
+left = 276
+right = 275
+fire = 98
 special = 2345
 
 [player6]
-power = 6
+thrust = 6
 left = 3
 right = 4
 fire = 5
