split between defense and attack specials adding new button for this split

--- a/src/config.ini
+++ b/src/config.ini
@@ -6,40 +6,46 @@ thrust = 1051
 left = 1001
 right = 1000
 fire = 1050
-special = 1053
+special_defense = 1053
+special_attack = 1052
 
 [player2]
 thrust = 2051
 left = 2001
 right = 2000
 fire = 2050
-special = 2053
+special_defense = 2053
+special_attack = 2052
 
 [player3]
-thrust = 50
-left = 50
-right = 100
-fire = 50
-special = 49
+thrust = 3051
+left = 3001
+right = 3000
+fire = 3050
+special_defense = 3053
+special_attack = 3052
 
 [player4]
-thrust = 51
-left = 2345
-right = 2345
-fire = 50
-special = 2345
+thrust = 4051
+left = 4001
+right = 4000
+fire = 4050
+special_defense = 4053
+special_attack = 4052
 
 [player5]
-thrust = 273
-left = 276
-right = 275
-fire = 98
-special = 2345
+thrust = 5051
+left = 5001
+right = 5000
+fire = 5050
+special_defense = 5053
+special_attack = 5052
 
 [player6]
 thrust = 6
 left = 3
 right = 4
 fire = 5
-special = 7
+special_defense = 7
+special_attack = 8
 
